@@ -176,6 +176,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       not good enough as it needs a bit cleanup - coming up next.
     - deduplicate.sh: cleanup as announced in the last commit - using
       lazy_canonical_path.
+    - deduplicate.sh: remove a bit of noisy debug output, but turn on
+      parse_otool_output debugging.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
